Ajout du fichier  poulets_app/urls.py,modification de static et visualisation de la page de base

--- a/poulets_app/templates/poulets_app/base.html
+++ b/poulets_app/templates/poulets_app/base.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <img src="{% static 'images/logo.png' %}" alt="DjodeSync Logo" class="logo">  <!-- Ajoute ton logo ici -->
+        <img src="{% static 'images/img1.jpg' %}" alt="DjodeSync Logo" class="logo-img">  <!-- Ajoute ton logo ici -->
         <h1>DjodeSync</h1>
         <nav>
             <ul>
