modification  du fichier vente_detail.html

--- a/poulets_app/templates/poulets_app/vente_detail.html
+++ b/poulets_app/templates/poulets_app/vente_detail.html
@@ -1,1 +1,6 @@
-e
+{% extends 'poulets_app/base.html' %}
+{% block title %}Dashboard{% endblock %}
+{% block content %}
+<h2>vente_detail Interne</h2>
+<p>Résumé KPIs à venir.</p>
+{% endblock %}
